// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 939.9272667157608,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 939.9272667157608,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": -101.9614554922677,
    },
    "isLeaf": false,
    "length": 516.9599966936684,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": 156.51854285456645,
    },
    "path": "/root/src",
    "visible": true,
    "width": 328.9745433505162,
    "x0": 319.57527068335867,
    "y0": 18.798545334315214,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 148.54316963829837,
      "y": 6,
      "z": -94.14001462010121,
    },
    "isLeaf": false,
    "length": 485.6742332050026,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 148.54316963829837,
      "y": 6,
      "z": 148.6971019824001,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 138.0266756898194,
    "x0": 329.52983179338867,
    "y0": 34.44142707864812,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 284.58883814204216,
      "y": 6,
      "z": -94.14001462010121,
    },
    "isLeaf": false,
    "length": 485.6742332050026,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 284.58883814204216,
      "y": 6,
      "z": 148.6971019824001,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 114.15553909760803,
    "x0": 477.5110685932381,
    "y0": 34.44142707864812,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 131.0041810158645,
      "y": 506,
      "z": -145.07249268051848,
    },
    "isLeaf": true,
    "length": 219.37279398600197,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 131.0041810158645,
      "y": 506,
      "z": -35.386095687517496,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 83.03957622489156,
    "x0": 339.4843929034187,
    "y0": 50.08430882298102,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 131.0041810158645,
      "y": 506,
      "z": 89.94318304981634,
    },
    "isLeaf": true,
    "length": 219.37279398600202,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 131.0041810158645,
      "y": 506,
      "z": 199.62958004281734,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 83.03957622489156,
    "x0": 339.4843929034187,
    "y0": 285.09998455331584,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 267.0498495196083,
      "y": 506,
      "z": -86.31857374793476,
    },
    "isLeaf": true,
    "length": 454.38846971633683,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 267.0498495196083,
      "y": 506,
      "z": 140.87566111023364,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 59.168439632680304,
    "x0": 487.4656297032681,
    "y0": 50.08430882298102,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 55.47636168262221,
      "y": 4,
      "z": 454.94545003682055,
    },
    "isLeaf": false,
    "length": 281.9781800147283,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 290.4581783615624,
      "y": 4,
      "z": 454.94545003682055,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 469.9636333578803,
    "x0": 187.98545334315213,
    "y0": 563.9563600294564,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -29.117092321796235,
      "y": 6,
      "z": 347.7937416312238,
    },
    "isLeaf": false,
    "length": 56.39563600294571,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 17.879271013991797,
      "y": 6,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 93.99272667157607,
    "x0": 197.38472601030975,
    "y0": 569.5959236297509,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -28.535694012487525,
      "y": 506,
      "z": 347.7937416312238,
    },
    "isLeaf": true,
    "length": 50.814212233582,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 10.32109299297845,
      "y": 506,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 77.71357401093195,
    "x0": 202.0359124847795,
    "y0": 572.3866355144328,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238.76217869219556,
      "y": 6,
      "z": 528.2597768406499,
    },
    "isLeaf": false,
    "length": 135.34952640706956,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 351.5534506980868,
      "y": 6,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 225.58254401178255,
    "x0": 432.3665426892499,
    "y0": 710.5850136371151,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 212.46355890971813,
      "y": 506,
      "z": 478.07029857333237,
    },
    "isLeaf": true,
    "length": 45.631402541728676,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 212.46355890971813,
      "y": 506,
      "z": 500.8859998441967,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 442.4955998572252,
    "y0": 716.6624479379002,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 262.5285341826792,
      "y": 506,
      "z": 478.07029857333237,
    },
    "isLeaf": true,
    "length": 45.631402541728676,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 262.5285341826792,
      "y": 506,
      "z": 500.8859998441967,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 492.5605751301863,
    "y0": 716.6624479379002,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 312.5935094556403,
      "y": 506,
      "z": 478.07029857333237,
    },
    "isLeaf": true,
    "length": 45.631402541728676,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 312.5935094556403,
      "y": 506,
      "z": 500.8859998441967,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 542.6255504031474,
    "y0": 716.6624479379002,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 362.6584847286015,
      "y": 506,
      "z": 478.07029857333237,
    },
    "isLeaf": true,
    "length": 45.631402541728676,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 362.6584847286015,
      "y": 506,
      "z": 500.8859998441967,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 592.6905256761086,
    "y0": 716.6624479379002,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 214.99582320171194,
      "y": 506,
      "z": 528.2597768406499,
    },
    "isLeaf": true,
    "length": 19.776984120471752,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 259.9962698906854,
      "y": 506,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 90.00089337794691,
    "x0": 442.4955998572252,
    "y0": 768.371284780414,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 214.99582320171194,
      "y": 506,
      "z": 554.1141952619068,
    },
    "isLeaf": true,
    "length": 19.77698412047164,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 259.9962698906854,
      "y": 506,
      "z": 554.1141952619068,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 90.00089337794691,
    "x0": 442.4955998572252,
    "y0": 794.225703201671,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 214.99582320171194,
      "y": 506,
      "z": 579.9686136831638,
    },
    "isLeaf": true,
    "length": 19.77698412047164,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 259.9962698906854,
      "y": 506,
      "z": 579.9686136831638,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 90.00089337794691,
    "x0": 442.4955998572252,
    "y0": 820.0801216229279,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 312.5935094556403,
      "y": 506,
      "z": 529.7791354158462,
    },
    "isLeaf": true,
    "length": 45.63140254172856,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 312.5935094556403,
      "y": 506,
      "z": 552.5948366867104,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 542.6255504031474,
    "y0": 768.371284780414,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 362.6584847286015,
      "y": 506,
      "z": 529.7791354158462,
    },
    "isLeaf": true,
    "length": 45.63140254172856,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 362.6584847286015,
      "y": 506,
      "z": 552.5948366867104,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 592.6905256761086,
    "y0": 768.371284780414,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 315.1257737476341,
      "y": 506,
      "z": 579.9686136831638,
    },
    "isLeaf": true,
    "length": 19.77698412047164,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 360.12622043660764,
      "y": 506,
      "z": 579.9686136831638,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 90.00089337794702,
    "x0": 542.6255504031474,
    "y0": 820.0801216229279,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 771.5290039756343,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 771.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": -57.117749006091444,
    },
    "isLeaf": false,
    "length": 462.9174023853805,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": 174.34095218659883,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 308.6116015902537,
    "x0": 77.15290039756343,
    "y0": 77.15290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -80.26361912536046,
      "y": 6,
      "z": -10.826008767553404,
    },
    "isLeaf": false,
    "length": 231.45870119269023,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 43.18102151074103,
      "y": 6,
      "z": -10.826008767553404,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 246.889281272203,
    "x0": 108.0140605565888,
    "y0": 123.44464063610148,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -27.59222968897906,
      "y": 506,
      "z": -63.0338522646826,
    },
    "isLeaf": true,
    "length": 208.8313739885169,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -27.59222968897906,
      "y": 506,
      "z": 41.38183472957584,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 204.65160382441266,
    "x0": 120.08196839881461,
    "y0": 134.75830423818817,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 162.7680171269643,
    },
    "isLeaf": false,
    "length": 46.29174023853807,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 185.91388724623334,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 30.861160159025417,
    "x0": 324.04218166976636,
    "y0": 401.1950820673298,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 88.32975581746331,
      "y": 506,
      "z": 163.91102305878002,
    },
    "isLeaf": true,
    "length": 41.71971651127507,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 88.32975581746331,
      "y": 506,
      "z": 184.77088131441758,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 25.527132477218515,
    "x0": 325.56618957885405,
    "y0": 403.48109393096126,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -76.40597410548229,
      "y": 4,
      "z": 405.7996533792891,
    },
    "isLeaf": false,
    "length": 77.15290039756337,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 116.4762768884263,
      "y": 4,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 385.76450198781714,
    "x0": 77.15290039756343,
    "y0": 617.2232031805074,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -141.44766339412587,
      "y": 502,
      "z": 405.7996533792891,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -141.44766339412587,
      "y": 502,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": 108.55233660587412,
    "y0": 655.7996533792891,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -250,
      "y": 500,
      "z": -250,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -250,
      "y": 500,
      "z": -250,
    },
    "path": "/root",
    "visible": true,
    "width": 0,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 274,
      "y": 2,
      "z": 12,
    },
    "isLeaf": false,
    "length": 1048,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 274,
      "y": 2,
      "z": 536,
    },
    "path": "/root",
    "visible": true,
    "width": 1048,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238,
      "y": 4,
      "z": 36,
    },
    "isLeaf": true,
    "length": 952,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 238,
      "y": 4,
      "z": 512,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 880,
    "x0": 48,
    "y0": 48,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 18,
      "y": 502,
      "z": 774,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 458,
      "y": 502,
      "z": 774,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 880,
    "x0": 48,
    "y0": 1024,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 210.5,
      "y": 2,
      "z": -19.75,
    },
    "isLeaf": false,
    "length": 921,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 210.5,
      "y": 2,
      "z": 440.75,
    },
    "path": "/root",
    "visible": true,
    "width": 921,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -90.85908697265867,
      "y": 4,
      "z": -4.25,
    },
    "isLeaf": true,
    "length": 859,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -90.85908697265867,
      "y": 4,
      "z": 425.25,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 256.28182605468265,
    "x0": 31,
    "y0": 31,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 309.6409130273413,
      "y": 4,
      "z": -4.25,
    },
    "isLeaf": false,
    "length": 859,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 309.6409130273413,
      "y": 4,
      "z": 425.25,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 482.71817394531735,
    "x0": 318.28182605468265,
    "y0": 31,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 188.461369541012,
      "y": 6,
      "z": -79.31597222222223,
    },
    "isLeaf": true,
    "length": 217.36805555555554,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 366.82045651367065,
      "y": 6,
      "z": -79.31597222222223,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 356.71817394531735,
    "x0": 349.28182605468265,
    "y0": 62,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 277.6409130273413,
      "y": 6,
      "z": 197.52604166666666,
    },
    "isLeaf": true,
    "length": 548.6319444444445,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 277.6409130273413,
      "y": 6,
      "z": 471.8420138888889,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 356.71817394531735,
    "x0": 349.28182605468265,
    "y0": 310.36805555555554,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 188.461369541012,
      "y": 504,
      "z": 624.5,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 366.82045651367065,
      "y": 504,
      "z": 624.5,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 356.71817394531735,
    "x0": 349.28182605468265,
    "y0": 874.5,
    "z0": 4,
  },
]
`;
